# et-ddf

./: .gitignore  Atilde.m  CMakeLists.txt  ETKF.m  Htilde.m  LICENSE  README.md  coop_loc.m  ct2dt.m  dubin_uni.m  ekf_test.m  gss.m  main1D.m  main2d.m  nees.m  package.xml  setup.py
config/: etddf.yaml  etddf_sonar.yaml  etddf_temp.yaml  example.yaml  landmarks_flight.yaml  landmarks_sim.yaml  measurements.yaml  repeat.csv  single_agent_static.rviz  strapdown.yaml
config/schedules/: schedule_3_assets.json
launch/: etddf.launch  etddf_sonar_associate.launch  example.launch  marker_visualization.launch  nav_filter.launch  repeat.launch  scenario.sitl.ocean.launch  uuv_etddf.launch  vehicle.bluerov2.sitl.launch  vehicle.red_actor.sitl.launch
matlab/: Agent.m  EKF.m  ETKF.m  KF.m  KF1D.m  KF2D.m  Lec26_1Drobotstatefilter.m  Lec29_chisquaretest1Drobot.m  README.md  comms_data_post.m  coop_loc.m  covar_diagonalize.m  covar_intersect.m  covar_intersect_test.m  ekf_test.m  fci_main.m  fci_plotting.m  gen_msg.m  gen_sim_transform.m  main.m  main2d.m  mse_plots.m  n_agent_lin_coop_loc.m  ncv_dyn.m  nees_test.m  nonlin_coop_loc.m  plot_workspace.m  range_bearing.m  regression_analysis.m  rel_range_bearing.m  sensor_noise_data.mat  test_gen_sim_transform.m
msg/: AssetEstimate.msg  EtddfStatistics.msg  Measurement.msg  MeasurementPackage.msg  NetworkEstimate.msg  PositionVelocity.msg  Sonar.msg  SonarSettings.msg
python/: README.md  requirements.txt  setup.py
python/config/: config.yaml  quantization_config.yaml
python/etddf/: README.md  agent.py  covar_intersect.py  gss.py  quantization.py  sim.py
python/etddf/filters/: ekf.py  etekf.py  etkf.py  kf.py
python/etddf/helpers/: data_handling.py  data_viz.py  msg_handling.py
python/etddf_ros2_msgs/: CMakeLists.txt  package.xml
python/etddf_ros2_msgs/msg/: AgentMeasurement.msg  AgentState.msg  LinrelMeasurement.msg  MsgStats.msg  UsblMeasurement.msg
python/offset/: agent.py  covar_intersect.py  dynamics.py  gss.py  main.py  sim.py
python/offset/dynamics/: ncv.py
python/offset/filters/: etkf.py  kf.py
python/offset/helpers/: config_handling.py  data_handling.py  data_viz.py
python/offset_ros/: CMakeLists.txt  README.md  package.xml
python/offset_ros/config/: points.yaml  ros_agent_config.yaml
python/offset_ros/helpers/: msg_conversion.py  viz.py
python/offset_ros/launch/: agent.launch  offset_etddf.launch
python/offset_ros/msg/: AgentState.msg  gpsMeasurement.msg
python/offset_ros/src/: agent_wrapper.py  comms.py  point_planner.py  publish_sensors.py
python/ros2_wrapper/: CMakeLists.txt  README.md  package.xml  package.xml.old_better  setup.cfg  setup.py
python/ros2_wrapper/config/: points.yaml  ros_agent_config.yaml  ros_config.yaml
python/ros2_wrapper/helpers/: msg_conversion.py  viz.py
python/ros2_wrapper/launch/: agent.launch.py  agent_1.launch  agent_2.launch  agent_3.launch  etddf.launch.py  points.launch
python/ros2_wrapper/src/: agent_wrapper.py  comms.py  point_planner.py  point_sim.py  publish_sensors.py
python/ros2_wrapper/srv/: CIUpdate.srv
python/ros_wrapper/: CMakeLists.txt  README.md  package.xml
python/ros_wrapper/config/: points.yaml  ros_agent_config.yaml  sensor_sim_config.yaml
python/ros_wrapper/helpers/: msg_conversion.py  viz.py
python/ros_wrapper/launch/: agent.launch  etddf.launch
python/ros_wrapper/msg/: AgentMeasurement.msg  AgentState.msg  MsgStats.msg  depthMeasurement.msg
python/ros_wrapper/src/: agent_wrapper.py  comms.py  point_sim.py  (+2 more)
python/src/: UFK.py  agent.py
scripts/: 2Dbayes.py  analyze_bags.py  analyze_data.py  automate.py  border_patrol_node.py  disarm.sh  dvl_sensor.py  edit_files.py  enemyMove.py  etddf_node.py  graph_groups.py  hello.yaml  marker_visualization.py  perlin.py  phase0_test.csv  phase1_test.csv  ping_360_node.py  process_sonar_node.py  quat2euler.py  repeat_data_analyzer.py  repeat_data_anaylzer.py  repeat_tester.py  scanner_control_node.py  scenarios.csv  search.py  search_node.py  seatrac_snub.py  setpoint_depth.sh  setpoint_velocity.sh  setpoint_visiter.py  show_orientation.py  sonar_association.py  sonar_scanner.py  space.py  start-test  strapdown_ins.py  teleport.py  trackRovs.py  truth_position_publisher.py  uuvcontrol_start.py  (+2 more)
sensor_nodes/: baro.py  dvl.py
src/cuprint/: cuprint.py
src/cuquantization/: quantize.py
src/etddf/: asset.py  delta_tier.py  delta_tier_filter.py  dynamics.py  etfilter.py  instantiate_asset.py  ledger_filter.py  measurement_expected.py  measurement_jacobians.py  measurements.py  normalize_angle.py
srv/: Detection.srv  GetMeasurementPackage.srv  GetSonarSettings.srv  SetSonarSettings.srv
testing/: asset.py  error_plotting.py  etdynamics.py  etfilter.py  measurements.py  one_dim_2_robots.py  one_dim_etddf_2_robots_dev.py  target_scenario_no_delta_tiers.py  three_robots_2D_linear.py  three_robots_2D_nonlinear.py  three_robots_3D_nonlinear.py  two_dim_2_robots_linear.py  two_dim_2_robots_nonlinear.py  two_robots_2D_nonlinear.py
testing/recording/: convert.sh
testing/scenarios/: one_robot_1D_linear.py  two_robots_1D_linear.py  two_robots_2D_linear.py
(+1 files in other folders)
