<?xml version="1.1"?>
<package format="2">
  <name>etddf</name>
  <version>2.0.0</version>
  <description>The etddf package</description>

  <maintainer email="luke.barbier@colorado.edu">LT</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>nav_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>minau</exec_depend> <!-- sonar_processing_node -->
  <depend>rospy</depend>

  <export>
  </export>
</package>